--- a/index.html
+++ b/index.html
@@ -7,42 +7,80 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | News homepage</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="index.css">
+ 
 </head>
 <body>
 
-  Home
+  <div class="container">
+    <div class="navbar">
+      <img src="C:\Users\karan\OneDrive\Desktop\news-homepage-main\assets\images\logo.svg">
+      <div class="nav-but">
+        <button>Home</button>
+        <button>New</button>
+        <button>Popular</button>
+        <button>Trending</button>
+        <button>Categories</button>
+      </div>
+    </div>
+    <div class="photo">
+      <img src="C:\Users\karan\OneDrive\Desktop\news-homepage-main\assets\images\image-web-3-desktop.jpg">
+      <!-- <h1>photo</h1> -->
+    </div>
+    <div class="sidebar">
+      <h2> New </h2>
+      <h5> Hydrogen VS Electric Cars</h5>
+      <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+      <hr>
+      <h5>The Downsides of AI Artistry</h5>
+      <p> What are the possible adverse effects of on-demand AI image generation?</p>
+    <hr>
+    <h5> Is VC Funding Drying Up?</h5>
+    <p> Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+    </div>
+    <div class="heading"><h1>The Bright Future of Web 3.0?</h1></div>
+    <div class="button">
+     <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+      But is it really fulfilling its promise?
+    </p>
+    <button> Read more</button>
+    </div>
+    <div class="txt">
+    <img src="C:\Users\karan\OneDrive\Desktop\news-homepage-main\assets\images\image-retro-pcs.jpg" >
+    <div class="innertxt">
+   
+      <P> <span>01</span><br><b> Reviving Retro PCs</b><br>What happens when old PCs are given modern upgrades?</P>
+    </div>
+  </div>
+    <div class="txt">
+     <img src="C:\Users\karan\OneDrive\Desktop\news-homepage-main\assets\images\image-top-laptops.jpg">
+     <div class="innertxt">
+   
+      <P> <span>02</span><br><b> Top 10 Laptops of 2022</b><br>Our best picks for various needs and budgets.</P>
+    </div>
+    </div>
+    <div class="txt">
+    <img src="C:\Users\karan\OneDrive\Desktop\news-homepage-main\assets\images\image-gaming-growth.jpg">
+    <div class="innertxt">
+   
+      <P> <span>03</span><br><b> The Growth of Gaming</b><br>How the pandemic has sparked fresh opportunities.</P>
+    </div>
+  </div>
+  </div>
+  <!-- Home
   New
   Popular
   Trending
   Categories
 
-  The Bright Future of Web 3.0?
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
 
-  Read more
 
-  New 
 
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
+ 
 
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
 
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
+ 
 
   02
   Top 10 Laptops of 2022
@@ -50,11 +88,8 @@
 
   03
   The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
+  How the pandemic has sparked fresh opportunities. -->
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+ 
 </body>
 </html>
